# snake_console

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
common/inc/: c14_bridge.h  cpp14Bridge.h  klog.h
common/src/: klog.cpp
inc/: app.h  board.h  drawer.h  drawerConsole.h  engine.h  test.h  types.h
src/: app.cpp  board.cpp  drawerConsole.cpp  engine.cpp  test.cpp
